--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -26,7 +26,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
     </script>
 
-    <script src="{{ '/assets/js/cv.js' | relative_url }}"></script>
+    <script src="{{ 'assets/js/cv.js' | relative_url }}"></script>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
@@ -35,8 +35,8 @@
     <link
       href="https://cdn.materialdesignicons.com/5.3.45/css/materialdesignicons.min.css"
       rel="stylesheet">
-    <link href="{{ '/assets/css/styles.css' | relative_url }}" rel="stylesheet">
-    <link href="{{ '/assets/css/print.css' | relative_url }}" rel="stylesheet">
+    <link href="{{ 'assets/css/styles.css' | relative_url }}" rel="stylesheet">
+    <link href="{{ 'assets/css/print.css' | relative_url }}" rel="stylesheet">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -44,7 +44,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="{{ '/assets/images/favicon.png' | relative_url }}">
+      href="{{ 'assets/images/favicon.png' | relative_url }}">
 
   </head>
   <body>
