materialize sass and new templates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,20 +3,29 @@
     <div class="col s12">
       <div class="card {{ page.theme.color }} lighten-5 cv-executive">
 
-        <div class="card-content waves-effect waves-light">
-          <span class="card-title xl emphasise">{{ site.data.about.name.value }}</span>
-          {% capture mdheader %}{% include_relative content/header.md %}{% endcapture %}
-          {{ mdheader | markdownify }}
+        <div class="cv-executive-banner">
+          {% if site.data.about.image %}
+            <img
+              src="{{ site.data.about.image }}"
+              title="{{ site.data.about.name }}"
+              class="circle cv-profile-pic" />
+          {% endif %}
+
+          <div class="card-content waves-effect waves-light">
+            <span class="card-title xl emphasise">{{ site.data.about.name }}</span>
+            {% capture mdheader %}{% include_relative content/header.md %}{% endcapture %}
+            {{ mdheader | markdownify }}
+          </div>
         </div>
 
-        <div class="card-action cv-contacts {{ page.theme.color }} darken-1 waves-effect waves-light">
+        <div class="card-action cv-contacts {{ page.theme.color }} darken-1">
           <div class="cv-contacts-container">
             {% for item in site.data.about.info %}
               <a class="waves-effect {{ page.theme.color }} darken-1 waves-light
                  white-text btn tooltipped btn-flat btn-lower contact-btn m"
                  data-position="bottom"
-                 data-tooltip="{{ item.value }}"
-                 href="{% if item.link %} {{ item.link }} {% else %} # {% endif %}">
+                 data-tooltip="{% if item.long %}{{ item.long }}{% else %}{{ item.value }}{% endif %}"
+                 href="{% if item.link %}{{ item.link }}{% else %}#/{% endif %}">
                 <div class="icon">
                   {% if item.icon %}
                     <span class="mdi mdi-{{ item.icon }}" />
