--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -16,20 +16,14 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-    <!-- Compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="{{ 'assets/css/materialize.css' | relative_url }}" rel="stylesheet">
 
-    <!-- Compiled and minified JavaScript -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
-    </script>
+    <script src="{{ 'assets/js/materialize.min.js' | relative_url }}"></script>
 
     <script src="{{ 'assets/js/cv.js' | relative_url }}"></script>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap"
       rel="stylesheet">
 
     <link
