--- a/assets/css/print.scss
+++ b/assets/css/print.scss
@@ -56,6 +56,8 @@
 
   div.cv-contacts-container {
     margin: initial;
+    width: 100%;
+    display: inline-block;
   }
 
   div.cv-contacts-container>a.btn:first-child {
