--- a/assets/css/print.scss
+++ b/assets/css/print.scss
@@ -8,7 +8,7 @@
     margin: 10mm 5mm 10mm 5mm;
   }
   html, body {
-    width: 100%;
+    width: 210mm;
     font-size: 9pt;
     background: #FFF;
     overflow:visible;
