--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ site.data.about.name.value }} - CV</title>
+    <title>{{ site.data.about.name }} - CV</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
